--- a/backend/KnowledgeHub.Api/KnowledgeHub.Api.csproj
+++ b/backend/KnowledgeHub.Api/KnowledgeHub.Api.csproj
@@ -7,16 +7,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.9">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	  <PackageReference Include="OpenAI" Version="2.4.0" />
+	  <PackageReference Include="PdfPig" Version="0.1.11" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
 
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="DTOs\" />
     <Folder Include="Helpers\" />
-    <Folder Include="Services\" />
+    <Folder Include="Storage\Documents\" />
   </ItemGroup>
 
 </Project>
