--- a/backend/KnowledgeHub.Api/appsettings.json
+++ b/backend/KnowledgeHub.Api/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Jwt": {
+    "Key": "super_secret_key_here_123fdfdsfhghtyreyertrvtterteteq35r2v3532t4t3regfdvbjnytjr",
+    "Issuer": "KnowledgeHub",
+    "Audience": "KnowledgeHubUsers" // optional, but good practice
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
