--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
+    "axios": "^1.12.2",
     "react-icons": "^5.5.0"
+  },
+  "devDependencies": {
+    "@types/axios": "^0.9.36"
   }
 }
