--- a/frontend/knowledge-hub-frontend/package.json
+++ b/frontend/knowledge-hub-frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "dayjs": "^1.11.18",
     "lucide-react": "^0.544.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
